@@ -1,20 +1,30 @@
 
 #include "ZeroLeptonRun2/JobBookeeping.h"
+#include "cafe/Config.h"
+
 #include "xAODRootAccess/TEvent.h"
 #include "xAODEventInfo/EventInfo.h"
+#include "xAODCutFlow/CutBookkeeper.h"
+#include "xAODCutFlow/CutBookkeeperContainer.h"
 
 #include "TH1F.h"
 #include "TObjArray.h"
 #include "TObjString.h"
 #include "TFile.h"
+#include "TTree.h"
 
 #include <stdexcept>
 #include <fstream>
 #include <sstream>
 
 JobBookeeping::JobBookeeping(const char *name)
-  : cafe::Processor(name), m_counter(0), m_fileInfos(0), m_eventCounter(0)
+  : cafe::Processor(name), m_counter(0), m_fileInfos(0), m_eventCounter(0),
+    m_derivationTag(INVALID_Derivation)
 {
+  cafe::Config config(name);
+  m_derivationTag = derivationTagFromString(config.get("DerivationTag","xxxx"));
+  if ( m_derivationTag == INVALID_Derivation ) throw(std::domain_error("JobBookeeping: invalid derivation tag specified"));
+
   std::ifstream pfcfile("pfc.txt",std::ios::in);
   if (pfcfile.is_open() && pfcfile) {
     std::string fname, guid;
@@ -51,6 +61,46 @@ void JobBookeeping::inputFileOpened(TFile *file)
 {
   m_eventCounter = 0;
   m_openedFiles.push_back(file->GetName());
+  if ( m_derivationTag == p2353 || m_derivationTag == p2363 ) {
+
+
+    // extract information from CutBookkeeperContainer in Metadata
+    // https://twiki.cern.ch/twiki/bin/view/AtlasProtected/AnalysisMetadata
+    TTree *MetaData = dynamic_cast<TTree*>(file->Get("MetaData"));
+    if ( !MetaData ) {throw std::logic_error("JobBookeeping: running on derivation but no MetaData tree !");}
+    if ( MetaData->GetBranch("StreamAOD") )  {throw std::logic_error("JobBookeeping: this does no appear to be a derivation file !");}
+    MetaData->LoadTree(0);
+
+    xAOD::TEvent event( MetaData,xAOD::TEvent::kBranchAccess);
+    const xAOD::CutBookkeeperContainer* incompleteCBC = 0;
+    if ( !event.retrieveMetaInput(incompleteCBC, "IncompleteCutBookkeepers").isSuccess()) {throw std::logic_error("JobBookeeping: could not retrieve CutBookkeeperContainer with tag IncompleteCutBookkeepers");}
+    if ( incompleteCBC->size() != 0 ) {throw std::logic_error("JobBookeeping: IncompleteCutBookkeepers not empty");}
+    const xAOD::CutBookkeeperContainer* completeCBC = 0;
+    if ( !event.retrieveMetaInput(completeCBC, "CutBookkeepers").isSuccess()){throw std::logic_error("JobBookeeping: could not retrieve CutBookkeeperContainer with tag CutBookkeepers");}
+    // Find the smallest cycle number, the original first processing step/cycle
+    int minCycle = 10000;
+    for ( auto cbk : *completeCBC ) {
+      if ( ! cbk->name().empty()  && minCycle > cbk->cycle() ){ minCycle = cbk->cycle(); }
+    }
+
+    // Now, find the right one that contains all the needed info...
+    const xAOD::CutBookkeeper* allEventsCBK=0;
+    for ( auto cbk :  *completeCBC ) {
+      if ( minCycle == cbk->cycle() && cbk->name() == "AllExecutedEvents" ){
+	allEventsCBK = cbk;
+	break;
+      }
+    }
+   uint64_t nEventsProcessed  = allEventsCBK->nAcceptedEvents();
+   double sumOfWeights        = allEventsCBK->sumOfEventWeights();
+   //double sumOfWeightsSquared = allEventsCBK->sumOfEventWeightsSquared(); 
+
+   out() << "Derivation file : " << file->GetName() << " nprocessed " <<  nEventsProcessed << " sumW " << sumOfWeights << std::endl;
+
+   m_counter->Fill(0.1,nEventsProcessed);
+   m_counter->Fill(1.1,sumOfWeights);
+
+  }
 }
 
 void JobBookeeping::inputFileClosing(TFile *file)
@@ -62,15 +112,17 @@ void JobBookeeping::inputFileClosing(TFile *file)
 bool JobBookeeping::processEvent(xAOD::TEvent& event)
 {
   m_eventCounter++;
-  m_counter->Fill(0.1,1.);
-  const xAOD::EventInfo* eventInfo = 0;
-  if ( ! event.retrieve( eventInfo, "EventInfo").isSuccess() ) throw std::runtime_error("Could not retrieve EventInfo");
+  if ( m_derivationTag == NotADerivation ||  m_derivationTag == p1872 ) {
+    m_counter->Fill(0.1,1.);
+    const xAOD::EventInfo* eventInfo = 0;
+    if ( ! event.retrieve( eventInfo, "EventInfo").isSuccess() ) throw std::runtime_error("Could not retrieve EventInfo");
 
-  if(eventInfo->eventType( xAOD::EventInfo::IS_SIMULATION ) ){
-    m_counter->Fill(1.1,eventInfo->mcEventWeight(0));
-  }
-  else {
-    m_counter->Fill(1.1,1.);
+    if(eventInfo->eventType( xAOD::EventInfo::IS_SIMULATION ) ){
+      m_counter->Fill(1.1,eventInfo->mcEventWeight(0));
+    }
+    else {
+      m_counter->Fill(1.1,1.);
+    }
   }
   return true;
 }
