@@ -26,6 +26,9 @@ cafe.Containers: %{Global.JetContainerKey} Muons %{Global.ElectronContainerKey} 
 cafe.Progress: 1000
 cafe.Events: 2
 
+# ---------------------------  bookkeeping ---------------
+JobBookeeping.DerivationTag: %{Global.DerivationTag}
+
 # ---------------------------  data/MC specific processors ---------------
 datamc.Select: IsData(isdata)
 datamc.Then: GRLProcessor(grl) DetectorQuality
