@@ -33,6 +33,9 @@ datamc.Else: MCEventVeto(mcveto) MCInfoProcessor(mcinfo) PileUpRWProcessor(pileu
 isdata.Expected: %{Global.IsData}
 isdata.Enforce: TRUE
 
+# ---------------------------  bookkeeping ---------------
+JobBookeeping.DerivationTag: %{Global.DerivationTag}
+
 # ---------------------------  Vetos based on MC truth -----------------
 mcveto.Period: %{Global.Period}
 
